# hierarchical_compressed_sets

./: .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  bottom_up.cpp  hcs.hpp  hcs_construction.hpp  sort_sets_asc.cpp  top_down.cpp
experiments_filenames/: 1000_fa_files.txt  16000_fa_files.txt  2000_fa_files.txt  4000_fa_files.txt  8000_fa_files.txt
